--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -29,7 +36,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.26</version><!--$NO-MVN-MAN-VER$-->
+			<version>8.0.26</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
 
 		<dependency>
