--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,10 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
