Usando o Resource Bundle do Spring como Resource Bundle do Bean Validation Especialista Spring REST Validações com Bean Validation Usando o Resource Bundle do Spring como Resource Bundle do Bean Validation

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>algafood-api</name>
 	<description>API de delivery de comida</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>openjdk-17.0.2</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
