--- a/src/main/resources/flyway.properties
+++ b/src/main/resources/flyway.properties
@@ -1,3 +1,3 @@
-flyway.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+flyway.url=jdbc:mysql://192.168.0.114/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 flyway.user=root
 flyway.password=FSF@.421
