--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.6.3</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.algaworks</groupId>
@@ -15,7 +15,7 @@
 	<name>algafood-api</name>
 	<description>API de delivery de comida</description>
 	<properties>
-		<java.version>openjdk-17.0.2</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
